--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Engel Natural Resources</h1>
-<p>Email: info@engelnr.com</p>
+<p>Liquidity and diversification for timberland</p>
+  <p>Maine and New Hampshire hardwood and softwood</p>
+  <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <p>Contact us to learn more: info@engelnr.com</p>
 </body>
 </html>
