--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 <h1>Engel Natural Resources</h1>
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
   <p>Contact us to learn more: info@engelnr.com</p>
+  <br>
+  <br>
+  <ahref="/disclaimer.html">Disclaimer</ahref>
 </body>
 </html>
