--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
   <br>
-  <a="/disclaimer.html">Disclaimer</a>
+  <a href="/disclaimer.html">Disclaimer</a>
 </body>
 </html>
