--- a/approach.html
+++ b/approach.html
@@ -2,7 +2,13 @@
 <html>
 <body>
 <h1>Engel Natural Resources</h1>
-  <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <h3>Our approach</h3>
+  <p><b>No debt. </b>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <p><b>No dividends. </b></p>
+  <p><b>Very low overhead. </b></p>
+  <p><b>Reinvest profits. </b></p>
+  <p><b>Hold cash opportunistically. </b></p>
+  <br>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
   <br>
