--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Engel Natural Resources</h1>
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <p><a href="/approach.html">Our approach</a></p>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
   <br>
