--- a/landowner.html
+++ b/landowner.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 <h1>Landowner</h1>
-  <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <p>We are working with landowners in Maine and New Hampshire, who hold substantial timberland holdings. We focus on partial liquidity and diversification solutions for these woodland owners, with a flexible approach based on their needs and legacy plans. We offer flexible solutions that allow the landowner to achieve their goals while retaining the character of and access to their legacy properties.</p>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
+  <a href="/index.html">Home</a>
   <br>
   <a="/disclaimer.html">Disclaimer</a>
 </body>
