--- a/approach.html
+++ b/approach.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Engel Natural Resources</h1>
   <h3>Our approach</h3>
-  <p><b>No debt. </b>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <p><b>No debt. </b></p>
   <p><b>No dividends. </b></p>
   <p><b>Very low overhead. </b></p>
   <p><b>Reinvest profits. </b></p>
@@ -11,7 +11,8 @@
   <br>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
+  <a href="/index.html">Home</a>
   <br>
-  <a="/disclaimer.html">Disclaimer</a>
+  <a href="/disclaimer.html">Disclaimer</a>
 </body>
 </html>
