--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1>Engel Natural Resources</h1>
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
   <p><a href="/approach.html">Our approach</a></p>
+  <p><a href="/landowner.html">Information for landowners</a></p>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
   <br>
