--- a/landowner.html
+++ b/landowner.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Landowner</h1>
+<h1>Engel Natural Resources</h1>
+  <h3>Information for landowners</h3>
   <p>We are working with landowners in Maine and New Hampshire, who hold substantial timberland holdings. We focus on partial liquidity and diversification solutions for these woodland owners, with a flexible approach based on their needs and legacy plans. We offer flexible solutions that allow the landowner to achieve their goals while retaining the character of and access to their legacy properties.</p>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
