--- a/landowner.html
+++ b/landowner.html
@@ -8,6 +8,6 @@
   <br>
   <a href="/index.html">Home</a>
   <br>
-  <a="/disclaimer.html">Disclaimer</a>
+  <a href="/disclaimer.html">Disclaimer</a>
 </body>
 </html>
