--- a/land.html
+++ b/land.html
@@ -5,7 +5,8 @@
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
+  <a href="/index.html">Home</a>
   <br>
-  <a="/disclaimer.html">Disclaimer</a>
+  <a href="/disclaimer.html">Disclaimer</a>
 </body>
 </html>
