--- a/approach.html
+++ b/approach.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Engel Natural Resources</h1>
-  <h3>Our approach</h3>
+  <h3>Our approach to timberland investing</h3>
   <p><b>No debt. </b></p>
   <p><b>No dividends. </b></p>
   <p><b>Very low overhead. </b></p>
