--- a/approach.html
+++ b/approach.html
@@ -3,11 +3,11 @@
 <body>
 <h1>Engel Natural Resources</h1>
   <h3>Our approach to timberland investing</h3>
-  <p><b>No debt. </b></p>
-  <p><b>No dividends. </b></p>
-  <p><b>Very low overhead. </b></p>
-  <p><b>Reinvest profits. </b></p>
-  <p><b>Hold cash opportunistically. </b></p>
+  <p><b>No debt. </b>Debt does not increase risk-adjusted returns.</p>
+  <p><b>No dividends. </b>A no dividend approach ensures that forest management decisions maximize value for shareholders through all market cycles.</p>
+  <p><b>Very low overhead. </b>Every 10bps of overhead can create a meaningful drag on returns.</p>
+  <p><b>Reinvest profits. </b>As long as there are compelling opportunities for investment within the circle of competence, profits will be reinvested.</p>
+  <p><b>Hold cash strategically. </b>As economic cycles rotate, the cash drag is significantly overtaken by the buying opportunity.</p>
   <br>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
