--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Engel Natural Resources</h1>
+<center><h1>Engel Natural Resources</h1></center>
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
   <p><a href="/approach.html">Our approach</a></p>
   <p><a href="/landowner.html">Information for landowners</a></p>
   <p>Contact us to learn more: info@engelnr.com</p>
   <br>
   <br>
-  <a href="/disclaimer.html">Disclaimer</a>
+  <hr>
+  <br>
+  <font size="2"><a href="/disclaimer.html">Disclaimer</a></font>
 </body>
 </html>
