--- a/landowner.html
+++ b/landowner.html
@@ -6,10 +6,14 @@
   <p>We are working with landowners in Maine and New Hampshire, who hold substantial timberland holdings.</p>
   <p>We focus on full parcel purchases, partial liquidity and diversification solutions for these woodland owners, with a flexible approach based on their needs and legacy plans.</p>
   <p>We offer flexible solutions that allow the landowner to achieve their goals while retaining the character of and access to their legacy properties.</p>
-  <p>Contact us to learn more: info@engelnr.com</p>
+    <br>
   <br>
+    <p>Contact us to learn more: info@engelnr.com</p>
+   <br>
   <a href="/index.html">Home</a>
   <br>
-  <a href="/disclaimer.html">Disclaimer</a>
+  <hr>
+  <br>
+  <font size="2"><a href="/disclaimer.html">Disclaimer</a></font>
 </body>
 </html>
