--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html><head><title>Engel Natural Resources</title>
+<meta content="text/html; charset=unicode" http-equiv="Content-Type"></head></meta>
 <body>
 <center><h1>Engel Natural Resources</h1></center>
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
