--- a/approach.html
+++ b/approach.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html><head><title>Engel Natural Resources</title>
+<meta content="text/html; charset=unicode" http-equiv="Content-Type"></head></meta>
 <body>
 <h1>Engel Natural Resources</h1>
   <h3>Our approach to timberland investing</h3>
