--- a/approach.html
+++ b/approach.html
@@ -14,6 +14,7 @@
   <br>
   <a href="/index.html">Home</a>
   <br>
-  <a href="/disclaimer.html">Disclaimer</a>
+  <hr>
+  <font size="2"><a href="/disclaimer.html">Disclaimer</a></font>
 </body>
 </html>
