--- a/approach.html
+++ b/approach.html
@@ -2,7 +2,8 @@
 <html><head><title>Engel Natural Resources</title>
 <meta content="text/html; charset=unicode" http-equiv="Content-Type"></head></meta>
 <body>
-<h1>Engel Natural Resources</h1>
+<center><h1>Engel Natural Resources</h1></center>
+  <hr>
   <h3>Our approach to timberland investing</h3>
   <p><b>No debt. </b>Debt does not increase risk-adjusted returns. This approach is helpful when other players are leveraged.</p>
   <p><b>No dividends. </b>A no dividend approach ensures that forest management decisions maximize value for shareholders through all market cycles. This policy preserves the option to keep trees on the stump when timber prices are low.</p>
