--- a/landowner.html
+++ b/landowner.html
@@ -5,8 +5,8 @@
 <center><h1>Engel Natural Resources</h1></center>
   <hr>
   <h3>Information for landowners</h3>
-  <p>We are working with landowners in Maine and New Hampshire, who hold substantial timberland holdings.</p>
-  <p>We focus on full parcel purchases, partial liquidity and diversification solutions for these woodland owners, with a flexible approach based on their needs and legacy plans.</p>
+  <p>We are working with landowners in Maine and New Hampshire who hold substantial timberland holdings.</p>
+  <p>We focus on full parcel purchases, partial liquidity and diversification solutions for these woodland owners.</p>
   <p>We offer flexible solutions that allow the landowner to achieve their goals while retaining the character of and access to their legacy properties.</p>
     <br>
   <br>
