--- a/approach.html
+++ b/approach.html
@@ -4,7 +4,7 @@
 <body>
 <center><h1>Engel Natural Resources</h1></center>
   <hr>
-  <h3>Our approach to timberland investing</h3>
+  <h3>Our approach: superior risk-adjusted returns for timberland</h3>
   <p><b>No debt. </b>Debt does not increase risk-adjusted returns. This approach is helpful when other players are leveraged.</p>
   <p><b>No dividends. </b>A no dividend approach ensures that forest management decisions maximize value for shareholders through all market cycles. This policy preserves the option to keep trees on the stump when timber prices are low.</p>
   <p><b>Very low overhead. </b>Every 10bps of overhead can create a meaningful drag on returns. Overhead is a different flavor of fees and lower fees mean higher returns.</p>
