--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <center><h1>Engel Natural Resources</h1></center>
   <hr>
   <p>We are working with landowners and investors to unlock diversification and liquidity in Maine and New Hampshire timberland holdings.</p>
+  <p>Our objective is to achieve superior risk-adjusted returns with both a low correlation to U.S. equities and inflation protection.</p>
   <p><a href="/approach.html">Our approach</a></p>
   <p><a href="/landowner.html">Information for landowners</a></p>
   <br>
